--- a/index.html
+++ b/index.html
@@ -61,5 +61,6 @@
 </head>
   <body class="bg-background-light dark:bg-background-dark font-display text-slate-800 dark:text-slate-200">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
